--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
     </h1>
     <div class="top-contact"><a href="contact.html"><p>Contact</p></a></div>
   </div>
+</div>
 <!--/header-->
 <div class="contact-page text-center">
   <h2 class="form-title">Contact</h2>
